# pip-compile-universal

./: .gitignore  CHANGELOG.md  README.rst  pip_compile_universal  pyproject.toml  setup.py
